getChannelData should raise exception when index is more than numberOfChannels. https://bugs.webkit.org/show_bug.cgi?id=92223

Patch by Li Yin <li.yin@intel.com> on 2012-07-29
Reviewed by Kentaro Hara.

Source/WebCore:

Spec: https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html#AudioBuffer-section
In getChannelData function, the index value MUST be less than numberOfChannels
or an exception will be thrown.

Test: webaudio/audiobuffer.html

* Modules/webaudio/AudioBuffer.cpp:
(WebCore::AudioBuffer::getChannelData):
(WebCore):
* Modules/webaudio/AudioBuffer.h:
(WebCore):
(AudioBuffer):
* Modules/webaudio/AudioBuffer.idl: raise exception when index is not less than numberOfChannels.

LayoutTests:

Spec: https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html#AudioBuffer-section
Add test to cover basic attributes of AudioBuffer.

* webaudio/audiobuffer-expected.txt: Added.
* webaudio/audiobuffer.html: Added.

Canonical link: https://commits.webkit.org/110430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123996 268f45cc-cd09-0410-ab3c-d52691b4dbfc